@@ -13,7 +13,9 @@ AUX openmotif-2.3.1-solaris-2.11.patch 409 RMD160 78e04d1ea6985b663423058754b6d0
 DIST openmotif-2.3.0-manual.pdf.tgz 4195259 RMD160 45b1a17a653b01ccf0324e0bc70fd1ef5db5a395 SHA1 1d0f55928ad65ee321564ba962b1608cfd83bb96 SHA256 49692fd4d5441d2dbb5ca36199b209c8503452fda9b36e929d1aa3673bffaecb
 DIST openmotif-2.3.0.tar.gz 5661471 RMD160 317c8d13d59c6fdd4a9f0e3b63000695f6677b6c SHA1 efb5f5fdc4cc43ef6065594f4ebe98953b7af15e SHA256 81d63e4145fab729621cba38bb0e88fccfbcbb5918473319e9b01a6fbe909544
 DIST openmotif-2.3.1-1.tar.gz 5937284 RMD160 e03422204b6077fa6556894f194236d40e92e42b SHA1 3245375f4bd8e2d2eb02c2636d5491e834d8bb1a SHA256 1f831a1a2feb63af3167e54eacc12856d8a38b9caf6342f30daf901a414a986e
+DIST openmotif-2.3.2.tar.gz 5941784 RMD160 2346a93fcec57b9c18b6657d1cc681b6001cba28 SHA1 c98ac1bf3640ce57da34a0704bdeb2b12011ae1f SHA256 f786f3724d33133e8c4b3c9b368c89d680e981ca1c0e8c3280f496976b390c7d
 EBUILD openmotif-2.3.0-r3.ebuild 4230 RMD160 870868d9e0bf9c85641c80852a09ff33fc9b6518 SHA1 3b81bdb8a8c4f83969d6e4ab8aa91f7b34e7c682 SHA256 3476a6d3ba8a823417e8756f4836536bfe13b7194ef9e48e054ec41abfa04c1c
 EBUILD openmotif-2.3.1.1.ebuild 4811 RMD160 72126373c65d1de8d151ecb18dec3fdf411d5832 SHA1 691e5dbe43f9441d45f6cd34a07cc5bf12fd4bc4 SHA256 ad9b390c78d159d9576bf1c6e1c8c7e923c3950bcb611c9c23dcb2b57ca77ae0
-MISC ChangeLog 32238 RMD160 2a76b743687be3acb41a4542a7f428bb54f41908 SHA1 f0179b6abc582586d37734f70f31a5f3fe9377a0 SHA256 6c1552d1a61efa7b64474303e4796f8b5c5b25195d76192048d9023980acc438
+EBUILD openmotif-2.3.2.ebuild 4525 RMD160 1a5d82c76e229e0a4ea4ecd2a67341f635597a88 SHA1 8bac87ab2871bdd3d77bd551e33e2fa289da5411 SHA256 0c34f2e2cdc4a5222fa8d602fc88291c4ac16d29249ba8a6d3aa607f894fda30
+MISC ChangeLog 32389 RMD160 bc26603d2bd8679db1c03841bc4c4305ffbcfc8c SHA1 734654e3b6f9b484a18431ebe832c9b2ce8d2e4b SHA256 9452aeb07ae0149b97f1cb555514859074bd2209a9bd05f8e8f2a9dc4a458f48
 MISC metadata.xml 219 RMD160 e4108515c4905448a3f0666974dfe0606bee0527 SHA1 02c240887d922c73610257891793b3bdec27fc8e SHA256 c1572876b54cc63c7b7ecad4c9adf1b6460d166c41e84b1df0322c5df6497ffb
